Fix table overlap and dead href

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,6 @@ a {
 .navbg {
   background-color: #333;
 }
+table {
+  margin-bottom: 2rem;
+}
